--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -4,10 +4,10 @@
 showcase:
   enable: true
   image:
-    x: "images/showcase/laptop.png"
-    _2x: "images/showcase/laptop.png"
+    x: "images/showcase/display.png"
+    _2x: "images/showcase/display.png"
   imageMobile:
-    x: "images/showcase/laptop.png"
+    x: "images/showcase/display.png"
 
   button:
     icon: "icon-email"
