--- a/hugo.toml
+++ b/hugo.toml
@@ -1,236 +1,85 @@
-baseURL = "https://prakash-khadka.com.np"
-languageCode = "np"
+baseURL = 'https://www.prakash-khadka.com.np/'
+languageCode = 'en-us'
+title = 'Prakash Khadka'
+theme = 'typo'
 
-[module]
-[module.hugoVersion]
-# We use hugo.Deps to list dependencies, which was added in Hugo 0.92.0
-min = "0.92.0"
+# Google analytics code
+googleAnalytics = "G-YB32WM67KX"
 
-[[module.imports]]
-path="github.com/zetxek/adritian-free-hugo-theme"
-
-## Base mounts - so your site's assets are available
-[[module.mounts]]
-source = "archetypes"
-target = "archetypes"
-
-[[module.mounts]]
-source = "assets"
-target = "assets"
-
-[[module.mounts]]
-source = "i18n"
-target = "i18n"
-
-[[module.mounts]]
-source = "layouts"
-target = "layouts"
-
-[[module.mounts]]
-source = "static"
-target = "static"
-
-# The following mounts are required for the theme to be able to load bootstrap
-# Remember also to copy the theme's `package.json` to your site, and run `npm install`
-[[module.mounts]]
-  source = "node_modules/bootstrap/scss"
-  target = "assets/scss/bootstrap"
-
-[[module.mounts]]
-  source = "node_modules/bootstrap/dist/js"
-  target = "assets/js/bootstrap"
-
-[[module.mounts]]
-  source = "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-  target = "assets/js/vendor/bootstrap.bundle.min.js"
+[taxonomies]
+tag = 'tags'
 
 [params]
+# Meta description
+description = "Remote APAC Senior DevOps Engineer/Infrastructure Engineer"
 
-  title = 'Prakash Khadka'
-  description = 'DevOps Engineer based in Kathmandu, Nepal. I am passionate about cloud computing, automation, and infrastructure as code.'
-  images = ['/img/og-img.png']
-  sections = ["showcase", "about", "education", "experience", "client-and-work", "testimonial", "contact", "newsletter"]
+# Appearance settings
+theme = 'auto'
+colorPalette = 'base16-eighties'
+hideHeader = false
 
-  # If you want to display an image logo in the header, you can add it here
-  # logo = '/img/hugo.svg'
+# Intro on main page, content is markdown
+homeIntroTitle = 'Namaste!'
+homeIntroContent = """
+I’m a DevOps and Infrastructure Engineer from Kathmandu, Nepal, passionate about building reliable, scalable systems. I work mainly with Google Cloud and Kubernetes, focusing on automation and performance at scale. 
 
-  homepageExperienceCount = 2
+I love puzzles whether in infrastructure, on a tough hike, or during a long run. I enjoy hard problems, physical challenges, and working with smart people to solve them.
 
-  [params.analytics]
-  ## Analytics parameters.
-  ### Supported so far: Vercel (Page Insights, Analytics)
-  ### And Google (Tag Manager, Analytics)
+If you want to connect or collaborate, feel free to reach out to me on LinkedIn.
+"""
 
-  # controls vercel page insights - disabled by default
-  # to enable, just set to true
-  vercelPageInsights = false
-  vercelAnalytics = false
+# Collection to display on home
+#homeCollectionTitle = 'Posts'
+#homeCollection = 'posts'
 
-  # google analytics and tag manager. to enable, set "enabled" to true
-  # and add the tracking code (UA-something for analytics, GTM-something for tag manager)
-  [params.analytics.googleAnalytics]
-      code = "UA-XXXXX-Y"
-      enabled = false
-  [params.analytics.googleTagManager]
-      code = "GTM-XXXXX"
-      enabled = false
+# Lists parameters
+paginationSize = 100
+listSummaries = true
+listDateFormat = '2 Jan 2006'
 
-[build]
-  [build.buildStats]
-    disableClasses = false
-    disableIDs = false
-    disableTags = false
-    enable = true
+# Footer
+showFooter = true
+footerContent = "© 2025 Prakash Khadka — Built with curiosity, coffee, and Kubernetes."
 
-[params.languages.selector.disable]
-  footer = false
+# Breadcrumbs
+[params.breadcrumbs]
+enabled = true
+showCurrentPage = true
+home = "Home"
 
-[languages]
-  [languages.en]
-    disabled = false
-    languageCode = 'en'
-    languageDirection = 'ltr'
-    languageName = 'English'
-    title = ''
-    weight = 0
+# Social icons
+[[params.social]]
+name = "linkedin"
+url = "https://www.linkedin.com/in/pkhadka56/"
 
-    [languages.en.menus]
-      [[languages.en.menus.header]]
-        name = 'About'
-        URL = '#about'
-        weight = 2
-      [[languages.en.menus.header]]
-        name = 'Education'
-        URL = '#education'
-        weight = 3
-      [[languages.en.menus.header]]
-        name = "Experience"
-        URL = "#experience"
-        weight = 4
-      [[languages.en.menus.header]]
-        name = "Testimonials"
-        URL = "#testimonial"
-        weight = 5
-      #[[languages.en.menus.header]]
-      #  name = "Blog"
-      #  URL = "/blog"
-      #  weight = 5
-      # [[languages.en.menus.header]]
-      #   name = "Contact"
-      #   URL = "#contact"
-      #   weight = 6
+[[params.social]]
+name = "github"
+url = "https://github.com/pkhadka56"
 
-      # Footer
-      [[languages.en.menus.footer]]
-        name = "About"
-        URL = "#about"
-        weight = 2
-      [[languages.en.menus.footer]]
-        name = "Education"
-        URL = "#education"
-        weight = 3
-      [[languages.en.menus.footer]]
-        name = "Experience"
-        URL = "#experience"
-        weight = 4
-      [[languages.en.menus.footer]]
-        name = "Testimonials"
-        URL = "#testimonial"
-        weight = 5
-      # [[languages.en.menus.footer]]
-      #   name = "Contact"
-      #   URL = "#contact"
-      #   weight = 6
+# Main menu pages
+[[params.menu]]
+name = "home"
+url = "/"
 
+[[params.menu]]
+name = "posts"
+url = "/posts"
 
-  [languages.np]
-    disabled = false
-    languageCode = 'np'
-    languageDirection = 'ltr'
-    languageName = 'नेपाली'
-    title = ''
-    weight = 0
-      [[languages.np.menus.header]]
-        name = 'बारेमा'
-        URL = '/np/#about'
-        weight = 2
-      [[languages.np.menus.header]]
-        name = 'शिक्षा'
-        URL = '/np/#education'
-        weight = 3
-      [[languages.np.menus.header]]
-        name = "अनुभव"
-        URL = "#experience"
-        weight = 4
-      [[languages.np.menus.header]]
-        name = "प्रशंसापत्र"
-        URL = "#testimonial"
-        weight = 5
+[[params.menu]]
+name = "about"
+url = "/about"
 
-      # Footer
-      [[languages.np.menus.footer]]
-        name = "बारेमा"
-        URL = "/np/#about"
-        weight = 2
-      [[languages.np.menus.footer]]
-        name = "शिक्षा"
-        URL = "/np/#education"
-        weight = 3
-      [[languages.np.menus.footer]]
-        name = "अनुभव"
-        URL = "#experience"
-        weight = 4
-      [[languages.np.menus.footer]]
-        name = "प्रशंसापत्र"
-        URL = "#testimonial"
-        weight = 5
+# Syntax highlight on code blocks
+[markup]
+[markup.highlight]
+style = 'algol'
 
-# Plugins
-
-[params.plugins]
-
-  # CSS Plugins
-  [[params.plugins.css]]
-  URL = "css/custom.css"
-  [[params.plugins.css]]
-  URL = "css/adritian-icons.css"
-
-  # JS Plugins
-  [[params.plugins.js]]
-  URL = "js/rad-animations.js"
-  [[params.plugins.js]]
-  URL = "js/sticky-header.js"
-  [[params.plugins.js]]
-  URL = "js/library/fontfaceobserver.js"
-
-  # SCSS Plugins
-  [[params.plugins.scss]]
-  URL = "scss/adritian.scss"
-
-
-# theme/color style
-[params.colorTheme]
-
-## the following configuration would disable automatic theme selection
-#  [params.colorTheme.auto]
-#    disable = true
-#  [params.colorTheme.forced]
-#    theme = "dark"
-
-## the following parameter will disable theme override in the footer
-#  [params.colorTheme.selector.disable]
-#  footer = true
-
-
-## by default we allow override AND automatic selection
-
-[params.blog]
-layout = "default" # options: default, sidebar
-sidebarWidth = "25" # percentage width of the sidebar
-showCategories = true
-showRecentPosts = true
-recentPostCount = 5
-listStyle = "summary" # options: simple, summary
-
-[params.experience]
-showJobCard = false  # Set to false to hide the job card
+# Giscus comments
+[params.giscus]
+enable = false
+repo = "user/repo"
+repoid = "repoId"
+category = "General"
+categoryid = "categoryId"
+mapping = "pathname"
+theme = "preferred_color_scheme"
