--- a/hugo.toml
+++ b/hugo.toml
@@ -62,12 +62,12 @@ name = "home"
 url = "/"
 
 [[params.menu]]
-name = "posts"
-url = "/posts"
+name = "certs"
+url = "/certs"
 
 [[params.menu]]
-name = "about"
-url = "/about"
+name = "books"
+url = "/books"
 
 # Syntax highlight on code blocks
 [markup]
